# mojowallet-python

./: .env.example  .gitignore  CHANGELOG.md  README.md  publish.py  pyproject.toml
docs/: README.md  changelog.md  error-handling.md  getting-started.md  sessions.md  wallet.md
mojowallet/: __init__.py  _client.py  _errors.py  customer.py  exceptions.py  session.py  wallet.py
planning/done/: wallet-hardening-sdk-update.md
tests/: conftest.py  test_client.py  test_customer.py  test_exceptions.py  test_integration.py  test_session.py  test_wallet.py
